--- a/static/css/index.css
+++ b/static/css/index.css
@@ -338,12 +338,13 @@ a:hover:after{
   color: white;
   text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
 }
-.button a:after,
-.button:after {
-  background-color: transparent !important;
+a.button:after,
+.button span:after {
   content: none !important;
+  background: transparent !important;
   display: none !important;
 }
+
 
 
 .header a{
